--- a/viditor-recorder.css
+++ b/viditor-recorder.css
@@ -3,13 +3,54 @@
 	margin: 0px;
 }
 
+html, body, video
+{
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+video
+{
+	background-color: #222;
+}
+
+img
+{
+	top: 1rem;
+	left: 1rem;
+	width: 100px;
+	position: absolute;
+}
+
+.sepia
+{
+	-webkit-filter: sepia(100%);
+}
+
+.invert
+{
+	-webkit-filter: invert(100%);
+}
+
+.hue-rotate
+{
+	-webkit-filter: hue-rotate(90deg);
+}
+
+.contrast
+{
+	-webkit-filter: contrast(200%);
+}
+
+.brightness
+{
+	-webkit-filter: brightness(0.5);
+}
+
 .grayscale
 {
 	-webkit-filter: grayscale(1);
-}
-.sepia
-{
-	-webkit-filter: sepia(1);
 }
 
 .blur
